<resources>
    <string name="app_name">NationalAmbulance</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_str">Continue</string>
    <string name="register">Register</string>
    <string name="request">Request</string>
    <string name="my_request">My Request</string>
    <string name="title_activity_user_map">Map</string>
    <string name="open_map">Open Map</string>
    <string name="lvl">Select Level</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">You have no request</string>
</resources>
