<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sa.sarah.nationalambulance.SigninActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/email_field_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints,TextFields"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/password_field_login"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />


    <EditText
        android:id="@+id/password_field_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints,TextFields"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="190dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn_complete"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_in"
        android:layout_marginStart="40dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="45dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/email_field_login"
        app:layout_constraintVertical_bias="0.137"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/signin_btn_complete"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="118dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
